--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            overflow-y: auto; /* Allow vertical scrolling */
+            overflow-y: none; /* Allow vertical scrolling */
         }
 
         a {
