--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <title>Void's Games</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: #1a1a1a;
-            color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            overflow-y: none; /* Allow vertical scrolling */
-        }
-
         a {
             text-decoration: none;
             color: inherit;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #1a1a1a;
+            color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
         }
 
         .topbar {
@@ -56,7 +56,7 @@
             transition: background-color 0.3s, transform 0.2s;
         }
 
-        .nav-button:hover {
+        .nav-button:hover, .nav-button2:hover {
             background-color: #555;
             transform: scale(1.05);
         }
@@ -71,16 +71,13 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 40px;
             text-align: center;
-            background-color: #1a1a1a;
-            max-height: 100%; /* Adjust height according to your topbar and footer */
-            overflow-y: auto; /* Allows scrolling within this section if needed */
+            padding: 20px;
         }
 
         .content p {
             font-size: 1.5em;
-            margin: 10px 0;
+            margin: 20px 0;
         }
 
         #icon {
