--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <style>
         html, body {
             height: 100%; /* Ensure html and body take full height */
+            margin: 0; /* Remove default margin */
         }
 
         body {
             font-family: 'Arial', sans-serif;
             background: #1a1a1a;
             color: #f5f5f5;
-            margin: 0;
-            padding: 0;
             display: flex;
             flex-direction: column;
         }
@@ -75,7 +74,7 @@
             justify-content: center; /* Center content vertically */
             padding: 40px;
             text-align: center;
-            background-color: #1a1a1a;
+            height: calc(100vh - 100px); /* Adjust height to fit the viewport */
         }
 
         .content p {
