--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             flex-direction: column;
             align-items: center;
             justify-content: center; /* Center content vertically */
-            padding: 40px;
+            padding: 20px; /* Reduced padding */
             text-align: center;
-            height: calc(100vh - 100px); /* Adjust height to fit the viewport */
+            height: calc(100vh - 160px); /* Adjust height for header and footer */
         }
 
         .content p {
@@ -116,13 +116,13 @@
 
         .featured-games {
             background-color: #1a1a1a;
-            padding: 40px;
+            padding: 20px; /* Reduced padding */
             text-align: center;
         }
 
         .featured-games h2 {
             font-size: 2.2em;
-            margin-bottom: 30px;
+            margin-bottom: 20px; /* Reduced margin */
         }
 
         .game-grid {
@@ -135,7 +135,7 @@
             width: 200px; /* Set a fixed width */
             height: 200px; /* Set a fixed height to make it square */
             background-color: #333;
-            margin: 20px; /* Add margin for spacing */
+            margin: 10px; /* Adjusted margin for spacing */
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -185,6 +185,7 @@
             text-align: center;
             padding: 20px;
             color: #aaa;
+            height: 60px; /* Set a fixed height for footer */
         }
 
         @media (max-width: 768px) {
