--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             justify-content: center; /* Center content vertically */
             padding: 20px; /* Reduced padding */
             text-align: center;
-            height: calc(100vh - 160px); /* Adjust height for header and footer */
+            height: 100%; /* Adjust height for header and footer */
         }
 
         .content p {
@@ -85,8 +85,8 @@
         #icon {
             display: block;
             margin: 20px auto;
-            width: 250px;
-            height: 250px;
+            width: 100%;
+            height: 100%;
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
@@ -132,8 +132,8 @@
         }
 
         .game-card {
-            width: 200px; /* Set a fixed width */
-            height: 200px; /* Set a fixed height to make it square */
+            width: 100%; /* Set a fixed width */
+            height: 100%; /* Set a fixed height to make it square */
             background-color: #333;
             margin: 10px; /* Adjusted margin for spacing */
             border-radius: 15px;
@@ -152,7 +152,7 @@
         .game-card img {
             width: 100%; /* Make images fill the card */
             height: auto; /* Maintain aspect ratio */
-            max-height: 150px; /* Set a maximum height for images */
+            max-height: 100%; /* Set a maximum height for images */
             border-radius: 10px;
             object-fit: cover; /* Maintain aspect ratio */
         }
@@ -195,8 +195,8 @@
             }
 
             #icon {
-                width: 200px;
-                height: 200px;
+                width: 100%;
+                height: 100%;
             }
 
             .game-card {
