--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         .topbar {
             background-color: #222;
-            padding: 20px;
+            padding: 10px; /* Reduced padding */
             text-align: center;
             border-bottom: 2px solid #444;
             position: sticky;
@@ -36,8 +36,7 @@
 
         .topbar h1 {
             margin: 0;
-            font-size: 2.5em;
-            color: #f5f5f5;
+            font-size: 2em; /* Adjusted font size */
         }
 
         .nav-buttons {
@@ -49,7 +48,7 @@
             background-color: #333;
             border: none;
             color: #fff;
-            padding: 10px 20px;
+            padding: 10px 15px; /* Adjusted padding */
             margin: 5px;
             cursor: pointer;
             font-size: 1em;
@@ -72,21 +71,21 @@
             flex-direction: column;
             align-items: center;
             justify-content: center; /* Center content vertically */
-            padding: 20px; /* Reduced padding */
+            padding: 10px; /* Adjusted padding */
             text-align: center;
-            height: 100%; /* Adjust height for header and footer */
         }
 
         .content p {
-            font-size: 1.5em;
+            font-size: 1.2em; /* Adjusted font size */
             margin: 10px 0;
         }
 
         #icon {
             display: block;
             margin: 20px auto;
-            width: 100%;
-            height: 100%;
+            width: 50vw; /* Use viewport width for responsiveness */
+            height: auto; /* Maintain aspect ratio */
+            max-height: 250px; /* Set a maximum height */
             border-radius: 50%;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
@@ -103,10 +102,12 @@
             background: linear-gradient(145deg, #28a745, #218838);
             color: #fff;
             padding: 10px 20px;
-            font-size: 2em;
+            font-size: 1.5em; /* Adjusted font size */
             border-radius: 50px;
             border: 2px solid #1e7e34;
             transition: background 0.3s, transform 0.2s;
+            width: 70%; /* Make button responsive */
+            max-width: 300px; /* Set a maximum width */
         }
 
         .play-button:hover {
@@ -116,13 +117,13 @@
 
         .featured-games {
             background-color: #1a1a1a;
-            padding: 20px; /* Reduced padding */
+            padding: 10px; /* Reduced padding */
             text-align: center;
         }
 
         .featured-games h2 {
-            font-size: 2.2em;
-            margin-bottom: 20px; /* Reduced margin */
+            font-size: 2em; /* Adjusted font size */
+            margin-bottom: 10px; /* Reduced margin */
         }
 
         .game-grid {
@@ -132,10 +133,10 @@
         }
 
         .game-card {
-            width: 100%; /* Set a fixed width */
-            height: 100%; /* Set a fixed height to make it square */
-            background-color: #333;
+            width: 100%; /* Make cards full width on smaller screens */
+            max-width: 200px; /* Set a maximum width for cards */
             margin: 10px; /* Adjusted margin for spacing */
+            background-color: #333;
             border-radius: 15px;
             transition: transform 0.2s;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -152,14 +153,14 @@
         .game-card img {
             width: 100%; /* Make images fill the card */
             height: auto; /* Maintain aspect ratio */
-            max-height: 100%; /* Set a maximum height for images */
+            max-height: 150px; /* Set a maximum height for images */
             border-radius: 10px;
             object-fit: cover; /* Maintain aspect ratio */
         }
 
         .game-card h3 {
             margin: 10px 0; /* Adjusted margin for titles */
-            font-size: 1.5em;
+            font-size: 1.2em; /* Adjusted font size */
         }
 
         .game-card a {
@@ -168,7 +169,7 @@
             background-color: #333;
             color: #fff;
             padding: 8px 12px; 
-            font-size: 1em;
+            font-size: 1em; /* Adjusted font size */
             border-radius: 15px;
             transition: background-color 0.3s, transform 0.2s;
             text-align: center;
@@ -183,24 +184,24 @@
         .footer {
             background-color: #1a1a1a;
             text-align: center;
-            padding: 20px;
+            padding: 10px; /* Adjusted padding */
             color: #aaa;
             height: 60px; /* Set a fixed height for footer */
         }
 
         @media (max-width: 768px) {
             .play-button {
-                padding: 15px 30px;
-                font-size: 1.5em;
+                padding: 15px 20px; /* Adjusted padding */
+                font-size: 1.2em; /* Adjusted font size */
             }
 
             #icon {
-                width: 100%;
-                height: 100%;
+                width: 70vw; /* Adjusted icon width */
+                height: auto; /* Maintain aspect ratio */
             }
 
             .game-card {
-                width: 100%; /* Make game cards responsive on smaller screens */
+                width: 100%; /* Make game cards full width */
                 height: auto; /* Allow height to adjust */
             }
         }
