--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center; /* Center content vertically */
+            overflow: hidden; /* Prevent scrolling */
         }
+
         a {
             text-decoration: none;
             color: inherit;
@@ -70,20 +72,19 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 5% 2%; /* Use percentages for padding */
+            padding: 5vh 2vw; /* Use vh and vw for padding */
             text-align: center;
-            background-color: #1a1a1a;
         }
 
         .content p {
-            font-size: 1.5em;
+            font-size: 2.5vw; /* Use viewport width for font size */
             margin: 10px 0;
         }
 
         #icon {
             display: block;
             margin: 20px auto;
-            width: 25%; /* Use a percentage for width */
+            width: 20vw; /* Use vw for responsive width */
             max-width: 250px; /* Set a max width */
             height: auto; /* Maintain aspect ratio */
             border-radius: 50%;
@@ -102,7 +103,7 @@
             background: linear-gradient(145deg, #28a745, #218838);
             color: #fff;
             padding: 10px 20px;
-            font-size: 2em;
+            font-size: 2.5vw; /* Use viewport width for font size */
             border-radius: 50px;
             border: 2px solid #1e7e34;
             transition: background 0.3s, transform 0.2s;
@@ -115,12 +116,12 @@
 
         .featured-games {
             background-color: #1a1a1a;
-            padding: 5% 2%; /* Use percentages for padding */
+            padding: 5vh 2vw; /* Use vh and vw for padding */
             text-align: center;
         }
 
         .featured-games h2 {
-            font-size: 2.2em;
+            font-size: 3vw; /* Use viewport width for font size */
             margin-bottom: 30px;
         }
 
@@ -131,9 +132,9 @@
         }
 
         .game-card {
-            width: 100%; /* Use percentage for width */
+            width: 30vw; /* Use vw for responsive width */
             max-width: 200px; /* Set a max width */
-            height: auto; 
+            height: 30vh; /* Set height based on viewport */
             background-color: #333;
             margin: 10px; 
             border-radius: 15px;
@@ -152,14 +153,14 @@
         .game-card img {
             width: 100%; 
             height: auto; 
-            max-height: 150px; 
+            max-height: 60%; /* Set max height to make images responsive */
             border-radius: 10px;
             object-fit: cover; 
         }
 
         .game-card h3 {
             margin: 10px 0; 
-            font-size: 1.5em;
+            font-size: 2vw; /* Use viewport width for title size */
         }
 
         .game-card a {
@@ -167,8 +168,8 @@
             text-decoration: none;
             background-color: #333;
             color: #fff;
-            padding: 8px 12px; 
-            font-size: 1em; 
+            padding: 5px 10px; 
+            font-size: 1.5vw; /* Use viewport width for font size */
             border-radius: 15px;
             transition: background-color 0.3s, transform 0.2s;
             text-align: center;
@@ -190,16 +191,17 @@
         @media (max-width: 768px) {
             .play-button {
                 padding: 15px 30px;
-                font-size: 1.5em;
+                font-size: 2vw; /* Adjust font size for smaller screens */
             }
 
             #icon {
-                width: 50%; /* Adjust for smaller screens */
+                width: 40vw; /* Adjust width for smaller screens */
                 max-width: 200px;
             }
 
             .game-card {
-                width: 80%; /* Make game cards responsive on smaller screens */
+                width: 80vw; /* Make game cards responsive on smaller screens */
+                height: auto; /* Allow height to adjust */
             }
 
             .nav-button, .nav-button2 {
@@ -218,7 +220,7 @@
             }
 
             .game-card h3 {
-                font-size: 1.2em; /* Smaller title size */
+                font-size: 1.5vw; /* Smaller title size */
             }
         }
     </style>
