--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 30px 0;
+            margin: 10px 0; /* Reduced margin */
         }
 
         .play-button {
@@ -183,6 +183,7 @@
             text-align: center;
             padding: 20px;
             color: #aaa;
+            margin: 0; /* Remove extra margin */
         }
 
         @media (max-width: 768px) {
