--- a/index.html
+++ b/index.html
@@ -70,19 +70,20 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 40px;
+            padding: 20px; /* Reduced padding */
             text-align: center;
             background-color: #1a1a1a;
+            margin-bottom: 0; /* Remove bottom margin */
         }
 
         .content p {
             font-size: 1.5em;
-            margin: 10px 0;
+            margin: 5px 0; /* Reduced margin */
         }
 
         #icon {
             display: block;
-            margin: 20px auto;
+            margin: 10px auto; /* Reduced margin */
             width: 250px;
             height: 250px;
             border-radius: 50%;
@@ -93,7 +94,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 10px 0; /* Reduced margin */
+            margin: 5px 0; /* Reduced margin */
         }
 
         .play-button {
@@ -112,78 +113,12 @@
             transform: translateY(-5px);
         }
 
-        .featured-games {
-            background-color: #1a1a1a;
-            padding: 40px;
-            text-align: center;
-        }
-
-        .featured-games h2 {
-            font-size: 2.2em;
-            margin-bottom: 30px;
-        }
-
-        .game-grid {
-            display: flex; /* Changed to flexbox */
-            justify-content: center; /* Center items */
-            flex-wrap: wrap; /* Allow wrapping */
-        }
-
-        .game-card {
-            width: 200px; /* Set a fixed width */
-            height: 200px; /* Set a fixed height to make it square */
-            background-color: #333;
-            margin: 20px; /* Add margin for spacing */
-            border-radius: 15px;
-            transition: transform 0.2s;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center; /* Center align content */
-        }
-
-        .game-card:hover {
-            transform: scale(1.05);
-        }
-
-        .game-card img {
-            width: 100%; /* Make images fill the card */
-            height: auto; /* Maintain aspect ratio */
-            max-height: 150px; /* Set a maximum height for images */
-            border-radius: 10px;
-            object-fit: cover; /* Maintain aspect ratio */
-        }
-
-        .game-card h3 {
-            margin: 10px 0; /* Adjusted margin for titles */
-            font-size: 1.5em;
-        }
-
-        .game-card a {
-            display: block;
-            text-decoration: none;
-            background-color: #333;
-            color: #fff;
-            padding: 8px 12px; /* Smaller padding */
-            font-size: 1em; /* Smaller font size */
-            border-radius: 15px;
-            transition: background-color 0.3s, transform 0.2s;
-            text-align: center;
-            width: 100%; /* Make link fill the card */
-        }
-
-        .game-card a:hover {
-            background-color: #555;
-            transform: scale(1.05);
-        }
-
         .footer {
             background-color: #1a1a1a;
             text-align: center;
-            padding: 20px;
+            padding: 10px; /* Reduced padding */
             color: #aaa;
-            margin: 0; /* Remove extra margin */
+            margin: 0; /* Ensure no extra margin */
         }
 
         @media (max-width: 768px) {
