--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             padding: 10px;
             text-align: center;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            color: #fff; /* Text color for better visibility */
         }
 
         .random-game img {
@@ -185,6 +186,7 @@
 
     <!-- Random game section -->
     <div id="random-game" class="random-game" style="display: none;">
+        <p>This is one of the games you can play. Click now!!</p> <!-- Added text -->
         <a id="random-game-link" href="#" target="_blank">
             <img id="random-game-image" src="" alt="Random Game">
             <h3 id="random-game-title"></h3>
