--- a/index.html
+++ b/index.html
@@ -142,6 +142,17 @@
             margin: 0 auto 5px auto; /* Center the image */
         }
 
+        .random-game-text {
+            position: fixed;
+            bottom: 130px; /* Position above the random game box */
+            right: 20px;
+            background: rgba(51, 51, 51, 0.8);
+            border-radius: 10px;
+            padding: 10px;
+            text-align: center;
+            color: #fff; /* Text color for better visibility */
+        }
+
         @media (max-width: 768px) {
             .play-button {
                 padding: 15px 30px;
@@ -184,9 +195,13 @@
     <div class="footer">
     </div>
 
+    <!-- Random game text above the box -->
+    <div class="random-game-text" style="display: none;">
+        This is one of the games you can play. Click now!!
+    </div>
+
     <!-- Random game section -->
     <div id="random-game" class="random-game" style="display: none;">
-        <p>This is one of the games you can play. Click now!!</p> <!-- Added text -->
         <a id="random-game-link" href="#" target="_blank">
             <img id="random-game-image" src="" alt="Random Game">
             <h3 id="random-game-title"></h3>
@@ -228,8 +243,9 @@
             document.getElementById('random-game-title').innerText = selectedGame.title;
             document.getElementById('random-game-description').innerText = selectedGame.description;
 
-            // Show the random game section
+            // Show the random game section and text
             document.getElementById('random-game').style.display = 'block';
+            document.querySelector('.random-game-text').style.display = 'block';
         }
 
         // Call the function when the page loads
