--- a/index.html
+++ b/index.html
@@ -128,9 +128,18 @@
             right: 20px;
             background: #333;
             border-radius: 10px;
-            padding: 10px;
+            padding: 15px; /* Increased padding */
             text-align: center;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            font-size: 1.2em; /* Increased font size */
+        }
+
+        .random-game h3 {
+            margin: 10px 0 5px; /* Adjusted margin for spacing */
+        }
+
+        .random-game p {
+            margin: 0; /* Adjusted margin for spacing */
         }
 
         .random-game img {
